--- a/app/views/static_pages/_result.html.erb
+++ b/app/views/static_pages/_result.html.erb
@@ -1,4 +1,4 @@
-<h1>Result of Search for <%=h params[:search_string] %></h1>
+github<h1>Result of Search for <%=h params[:search_string] %></h1>
 <table>
  <tr>
  </tr>
